--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,8 +7,12 @@ body {
 }
 
 a {
-  color: inherit;
+  color: #0070f3;
   text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 * {
@@ -17,7 +21,7 @@ a {
 
 img {
   max-width: 100%;
-  height: auto;
+  display: block;
 }
 
 h1,
